# enterprise-log-analyzer-be

./: .env.example  .gitignore  CISCO_INTEGRATIONS.md  CLUSTERING_OBSERVABILITY_GUIDE.md  Dockerfile  LOGBERT_MIGRATION_GUIDE.md  LOGBERT_QUICKSTART.md  LOGBERT_SUMMARY.md  MOCK_PRODUCERS_API.md  OCI_DEPLOYMENT_COST_ESTIMATE.md  README.md  SCOM_SQUAREDUP_INTEGRATION.md  debug_embedding.py  docker-compose.yml  flowchart.md  package-lock.json  pyproject.toml  quick_test.py  requirements.txt  test_logbert.py  test_logging.py
.chroma/121ad6e5-8be1-4fe2-b79d-6e5444d6f089/: index_metadata.pickle
.chroma/8ee032ee-5471-4952-8497-e03b8d300219/: index_metadata.pickle
.chroma/95a6ba0b-debe-4a49-a8fa-3f472f9e05ef/: index_metadata.pickle
.chroma/f75b6bbd-1550-4163-acfa-00d5bfd0bfbe/: index_metadata.pickle
.github/workflows/: ci.yml
app/: cli.py  main.py  run.py
app/api/: deps.py
app/api/v1/: api.py
app/core/: config.py  logging_config.py  runtime_state.py
app/crud/: crud_data_source.py  crud_item.py
app/db/: init_db.py  session.py
app/models/: data_source.py  item.py
app/parsers/: __init__.py  linux.py  macos.py  templating.py  windows.py
app/rules/: automations.py  automations.yml  rules.yml
app/schemas/: data_source.py  item.py
app/services/: chroma_service.py  cluster_metrics.py  clustering_service.py  correlation_keys.py  cross_correlation.py  embedding.py  failure_prediction.py  failure_rules.py  ingest_templates.py  llm_service.py  metrics_normalization.py  online_clustering.py  otel_exporter.py  prototype_improver.py  prototype_router.py
app/services/normalizers/: bluecat.py  catalyst.py  dcim_http.py  redfish.py  scom.py  snmp.py  squaredup.py  telegraf.py  thousandeyes.py
app/streams/: automations.py  cluster_enricher.py  consumer.py  enricher.py  issues_aggregator.py  metrics_aggregator.py  producer.py  producer_manager.py  utils.py
app/streams/producers/: __init__.py  base.py  bluecat.py  cisco_catalyst.py  datadog.py  dell_ome.py  (+9 more)
docker/: start.sh
scripts/: add_sim_sources.py  cluster_templates.py  improve_prototypes.py  push_scom_example.py  run_consumer.py
simulation-api/: README.md  mock_api.py  requirements.txt  spec.example.json
(+10 files in other folders)
